ionic/lab + scrollbar fixes

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,9 +1,11 @@
 ion-checkbox {
     --size: 32px;
     --background-checked: #6815ec;
-  }
-  
-  ion-checkbox::part(container) {
-    border-radius: 6px;
-    border: 2px solid #6815ec;
-  }
+  } 
+ion-checkbox::part(container) {
+  border-radius: 6px;
+  border: 2px solid #6815ec;
+}
+.no-scroll {
+  --overflow: hidden;
+}
